// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should be able to process a pure Swagger 2.0 object and should log expected output to console 1`] = `
Array [
  "class TestPost_200 {
  private _email?: string;

  constructor(input: {
    email?: string,
  }) {
    this._email = input.email;
  }

  get email(): string | undefined { return this._email; }
  set email(email: string | undefined) { this._email = email; }
}",
]
`;

exports[`Should be able to process a pure Swagger 2.0 object and should log expected output to console 2`] = `
Array [
  "class TestPostBody {
  private _email?: string;

  constructor(input: {
    email?: string,
  }) {
    this._email = input.email;
  }

  get email(): string | undefined { return this._email; }
  set email(email: string | undefined) { this._email = email; }
}",
]
`;
